# harmonyos-design

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.json  NOTICE  README.en.md  README.md  SECURITY.md  SHA256SUMS.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: validate.yml
evals/: review-evals.json  skill-routing-evals.json  trigger-evals.json
evals/fixtures/: async-false-success.ets  custom-card-touch-only.ets  good-basic.ets  image-button-no-a11y.ets  layout-animation-in-gesture.ets  longpress-only.ets  multiple-animateto.ets  shared-transition-overlap.ets  spring-business-timer.ets  tablet-phone-layout.ets
examples/: MotionTokens.example.ets  README.md  ReviewOutput.example.md
examples/01-异步保存状态真实性/: AFTER.ets  REVIEW.md
examples/02-拖拽速度衔接/: AFTER.ets  BEFORE.ets  REVIEW.md
examples/03-手机到平板适配/: AFTER-PLAN.md  REVIEW.md
examples/04-永恒原则与版本化视觉层/: AFTER-PLAN.md  REVIEW.md
examples/05-新项目启动基线/: PROJECT-BRIEF.md  STARTER-PLAN.md
examples/06-代码生成产品动效边界/: REVIEW.md
examples/pilot-app/: README.md  build-profile.json5  oh-package.json5
rules/: harmony-design-rules.yaml  schema.json  sources.yaml
scripts/: __init__.py  check_links.py  package_release.py  validate_evals.py  validate_repo.py  validate_rules.py  validate_skills.py
skills/harmonyos-design/: SKILL.md
skills/harmonyos-motion-vocabulary/: SKILL.md
skills/review-harmonyos-design/: SKILL.md
templates/: case-study.md  rule-proposal.md
tests/: test_validation.py
(+15 files in other folders)
